--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,9 @@
       <button>Comments</button>
     </div>
   </section>
+  <footer>
+    <span class="footer">Created by <a href="">Manel</a> & <a href="">Leonard</a></span>
+  </footer>
 </body>
 
 </html>
