--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/1dea6ac3ad.js" crossorigin="anonymous"></script>
   <title>Tasty</title>
 </head>
 
@@ -20,12 +21,6 @@
   </header>
 
   <section id="recipes-cards">
-    <div class="card">
-      <div>
-      </div>
-      <h3>Title</h3>
-      <button>Comments</button>
-    </div>
   </section>
   <footer>
     <span class="footer">Created by <a href="">Manel</a> & <a href="">Leonard</a></span>
