--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,14 @@
     </nav>
   </header>
 
+  <section id="headline">
+  </section>
+
   <section id="recipes-cards">
+    <h2>Recipes</h2>
   </section>
   <footer>
-    <span class="footer">Created by <a href="">Manel</a> & <a href="">Leonard</a></span>
+    <span class="footer">Created by <a href="https://github.com/ha-manel">Manel</a> & <a href="https://github.com/leonard33">Leonard</a></span>
   </footer>
 </body>
 
