Fix linter errors

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
   <header>
     <nav>
       <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Recipes</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a class="nav-link" href="">Home</a></li>
+        <li><a class="nav-link" href="">Recipes</a></li>
+        <li><a class="nav-link" href="">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -27,7 +27,8 @@
     <h2>Recipes</h2>
   </section>
   <footer>
-    <span class="footer">Created by <a href="https://github.com/ha-manel">Manel</a> & <a href="https://github.com/leonard33">Leonard</a></span>
+    <span class="footer">Created by <a href="https://github.com/ha-manel">Manel</a> & <a
+        href="https://github.com/leonard33">Leonard</a></span>
   </footer>
 </body>
 
