Make card modal window

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,38 @@
   <section id="recipes-cards">
     <h2>Recipes</h2>
   </section>
+
+  <section class="comment-modal">
+    <div class="popup-window">
+      <div class="popup-image">
+        <img
+          src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
+          alt="">
+      </div>
+      <div class="item-info">
+        <h3>Title</h3>
+        <p class="recipe">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident, facilis eius nisi eos
+          consectetur perferendis, voluptatibus tenetur unde mollitia magnam quae exercitationem? Ea eligendi sapiente
+          ratione obcaecati, beatae cupiditate a!</p>
+      </div>
+      <div class="comments-container">
+        <h4>Comments</h4>
+        <div class="comment">
+          <p><span class="date">17/05/2022</span><span class="name">dunno:</span> <span class="comment-text">comment</span>
+          </p>
+        </div>
+      </div>
+      <div class="add-comment">
+        <h4>Add a comment</h4>
+        <form>
+          <input type="text" placeholder="Your Name" id="name" required>
+          <input type="text" placeholder="Write your comment" id="comment" required>
+          <input type="submit" value="Comment" id="submit-btn">
+        </form>
+      </div>
+    </div>
+  </section>
+
   <footer>
     <span class="footer">Created by <a href="https://github.com/ha-manel">Manel</a> & <a
         href="https://github.com/leonard33">Leonard</a></span>
