Add close button

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
 
   <section class="comment-modal">
     <div class="popup-window">
+      <div class="close-btn">&times;</div>
       <div class="popup-image">
         <img
           src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
@@ -43,7 +44,8 @@
       <div class="comments-container">
         <h4>Comments</h4>
         <div class="comment">
-          <p><span class="date">17/05/2022</span><span class="name">dunno:</span> <span class="comment-text">comment</span>
+          <p><span class="date">17/05/2022</span><span class="name">dunno:</span> <span
+              class="comment-text">comment</span>
           </p>
         </div>
       </div>
