--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
     </div>-->
     <div class="comments">
       <div class="comments-number"><h4>Comments (2)</h4></div>
-        <ul>
+        <ul id="commentlist">
           <li>03/11/2021 Alex: I'd love to buy it</li>
           <li>03/11/2022 Mia: I love</li>
         </ul>
