Add comments section

--- a/src/index.html
+++ b/src/index.html
@@ -36,18 +36,13 @@
           alt="">
       </div>
       <div class="item-info">
-        <h3>Title</h3>
-        <p class="recipe">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident, facilis eius nisi eos
-          consectetur perferendis, voluptatibus tenetur unde mollitia magnam quae exercitationem? Ea eligendi sapiente
-          ratione obcaecati, beatae cupiditate a!</p>
+        <h3></h3>
+        <p class="recipe"></p>
       </div>
       <div class="comments-container">
         <h4>Comments</h4>
-        <div class="comment">
-          <p><span class="date">17/05/2022</span><span class="name">dunno:</span> <span
-              class="comment-text">comment</span>
-          </p>
-        </div>
+        <ul class="comment">
+        </ul>
       </div>
       <div class="add-comment">
         <h4>Add a comment</h4>
