--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,7 @@
       <div class="close-btn">&times;</div>
       <div class="popup-image">
         <img
-          src=""
-          alt="">
+          alt="popup-image">
       </div>
       <div class="item-info">
         <h3></h3>
